# cm_tools-snapshots

./: CHANGES  COPYING  MANIFEST  Makefile  README  aclocal.m4  configure  configure.in  makefile.in  mkdirs.sh
certify/: Makefile  README  config.txt  makefile.in  release.txt  reusable.txt
package/: cm_tools-12.0.spec
package/debian/: changelog  control  copyright  rules
src/: Makefile  common.mk  makefile.in
src/baseline/: Makefile  makefile.in
src/baseline/src/: Makefile  baseline.c  baseline.sh  makefile.in
src/baseline/test/: Makefile  makefile.in  run_test.sed  run_test.sh  run_tool.c
src/checkin/: Makefile  makefile.in
src/checkin/src/: Makefile  checkin.c  makefile.in  rcsput.c  rcsput.sh
src/checkin/test/: Makefile  README  admin.sh  case1.sh  case1_a.ref  case1_a.sh  case1_b.ref  case1_b.sh  case2.sh  case2_a.ref  case2_a.sh  case2_b.ref  case2_b.sh  case2_c.ref  case2_c.sh  case2_d.ref  case2_d.sh  case3.sh  case3_a.ref  case3_a.sh  case3_b.ref  case3_b.sh  case3_c.ref  case3_c.sh  case3_d.ref  case3_d.sh  case3_e.ref  case3_e.sh  case3_f.ref  case3_f.sh  clean.sh  makefile.in  run_test.sh  run_tool.c  set_date.c
src/checkout/: Makefile  makefile.in
src/checkout/src/: Makefile  checkout.c  makefile.in  rcsget.c  rcsget.sh
src/checkout/test/: Makefile  makefile.in  run_test.sh
src/checkup/: Makefile  makefile.in
src/checkup/src/: Makefile  checkup.c  makefile.in
src/checkup/test/: Makefile  makefile.in  run_test.sh
src/copy/: Makefile  makefile.in
src/copy/src/: Makefile  copy.c  makefile.in
src/copy/test/: Makefile  makefile.in  run_test.sh
src/link2rcs/: Makefile  makefile.in
src/link2rcs/src/: Makefile  link2rcs.c  link2rcs.sh  makefile.in
src/link2rcs/test/: Makefile  case1.ref  case1.ref2  case1.sh  case2.ref  case2.ref2  case2.sh  listtree.sh  makefile.in  run_test.sh
src/permit/: Makefile  makefile.in
src/permit/src/: Makefile  makefile.in  permit.c
src/permit/test/: Makefile  case0.ref  case0.sh  case1.ref  case1.sh  case2.ref  case2.sh  case3.ref  case3.sh  case4.ref  case4.sh  case5.ref  case5.sh  makefile.in  run_test.sh
src/vcs/: Makefile  makefile.in
src/vcs/src/: Makefile  delete.c  insert.c  makefile.in  unlock.c  vcs.c  vcs.h
support/: Makefile  copy.sh  makefile.in  run_tool.c  set_date.c  showtree.sh  testinit.sh  testpath.sh  who_suid.sh
user/: Makefile  baseline.doc  baseline.man  checkin.doc  checkin.man  checkout.doc  checkout.man  checkup.bug  checkup.doc  checkup.man  copy.doc  copy.man  ded.doc  ded.man  link2rcs.doc  link2rcs.man  makefile.in  permit.bug  permit.doc  permit.man  rcsget.doc  rcsget.man  rcsput.bug  rcsput.doc  rcsput.man  vcs.man
(+7 files in other folders)
