dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 11.4 2013/12/07 18:44:36 tom Exp $
AC_REVISION($Revision: 11.4 $)
AC_PREREQ(2.52.20011201)
AC_INIT(user/link2rcs.man)
CF_CHECK_CACHE

###	get special options

###	program paths
CF_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

###	extra things that we'll substitute in the makefile
CF_DISABLE_ECHO
CF_LIB_PREFIX
CF_FIND_TDLIB
CF_MAKE_INCLUDE
CF_ALL_MAKEFILES

###	use option -with-warnings to turn on all gcc warnings
CF_ENABLE_WARNINGS

### Compiler characteristics

### Headers

### DataTypes

### DataItems/Structs

### Program locations

AC_OUTPUT( \
	$cf_cv_all_makefiles,[
],[
	cf_cv_all_makefiles="$cf_cv_all_makefiles"
	make_include_left="$make_include_left"
	make_include_right="$make_include_right"
])
