dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 11.6 2023/01/22 18:48:40 tom Exp $
AC_REVISION($Revision: 11.6 $)
AC_PREREQ(2.52.20200802)
AC_INIT(user/link2rcs.man)
CF_CHECK_CACHE

###	get special options

CF_WITHOUT_X

###	program paths
CF_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
CF_PKG_CONFIG

###	extra things that we'll substitute in the makefile
CF_DISABLE_ECHO
CF_LIB_PREFIX
CF_FIND_TDLIB
CF_MAKE_INCLUDE
CF_ALL_MAKEFILES

###	use option -with-warnings to turn on all gcc warnings
CF_ENABLE_WARNINGS

### Compiler characteristics

### Headers

### DataTypes

### DataItems/Structs

### Program locations

AC_OUTPUT( \
	$cf_cv_all_makefiles,[
],[
	cf_cv_all_makefiles="$cf_cv_all_makefiles"
	make_include_left="$make_include_left"
	make_include_right="$make_include_right"
])
